--- a/nanoscope.html
+++ b/nanoscope.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         {{> header}}
         {{> tabs}}
         {{> footer}}
@@ -19,11 +19,23 @@
 
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#tab_hot" role="tab" data-toggle="tab">Hot</a></li>
-        <li role="presentation"><a href="#tab_new" role="tab" data-toggle="tab">New</a></li>
+        <li title="Hot" role="presentation" class="active">
+            <a href="#tab_hot" role="tab" data-toggle="tab">
+                <span class="glyphicon glyphicon-fire"></span>
+            </a>
+        </li>
+        <li title="New" role="presentation">
+            <a href="#tab_new" role="tab" data-toggle="tab">
+                <span class="glyphicon glyphicon-flash"></span>
+            </a>
+        </li>
         <!--<li role="presentation"><a href="#tab_top" role="tab" data-toggle="tab">Top</a></li>-->
-        <li role="presentation" class="pull-right"><a href="#tab_submit" role="tab" data-toggle="tab">Submit</a></li>
-        <li role="presentation" class="pull-right">
+        <li title="Submit" role="presentation" class="pull-right">
+            <a href="#tab_submit" role="tab" data-toggle="tab">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </li>
+        <li title="Info" role="presentation" class="pull-right">
             <a href="#tab_about" role="tab" data-toggle="tab">
                 <span class="glyphicon glyphicon-info-sign"></span>
             </a>
@@ -47,7 +59,7 @@
     {{#if currentUser}}
         <h4>Submit a new post:</h4>
         <form id="addPost" class="">
-            <input name="title" placeholder="Title" class="form-control" required>
+            <textarea name="title" placeholder="Title" class="form-control" required></textarea>
             <input name="url" placeholder="URL" class="form-control" required>
             {{#if isAdmin}}
                 <br>
@@ -87,7 +99,7 @@
 <template name="post">
     <br>
     <div class="row">
-        <div class="col-xs-1 centerText" style="padding: 0;">
+        <div class="col-xs-1 centerText noPadding">
             <button id="upvote" class="btn btn-default btn-xs {{#if hasUpvoted}}voted{{/if}}">
                 <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
             </button><br>
@@ -97,23 +109,25 @@
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
             </button>
         </div>
-        <div class="col-xs-11" style="padding: 0;">
-            <h4 class="inline noMargin"><a href="{{url}}" rel="nofollow">{{title}}</a></h4>
-            <span class="small">({{domain}})</span><br>
-            {{#if isAdmin}}
-                <samp class="xSmall form-inline pull-right">
-                    &nbsp; &nbsp;
-                    {{lengthscore}} + <input data-id="{{_id}}" class="bias form-control input-sm" value="{{bias}}"> = {{netscore}}
-                </samp>
-            {{/if}}
-            <span class="small gray">
-                Submitted by {{authorname}}, {{fromNow}}.
-                {{#if isAdminOrAuthor}}
-                    <span class="delete gray cursorPointer">
-                        <span class="glyphicon glyphicon-trash"></span>
-                    </span>
+        <div class="col-xs-11 noPadding">
+            <div style="padding-left: 20px;">
+                <h4 class="inline noMargin"><a href="{{url}}" rel="nofollow">{{title}}</a></h4>
+                <span class="small">({{domain}})</span><br>
+                {{#if isAdmin}}
+                    <samp class="xSmall form-inline pull-right">
+                        &nbsp; &nbsp;
+                        {{lengthscore}} + <input data-id="{{_id}}" class="bias form-control input-sm" value="{{bias}}"> = {{netscore}}
+                    </samp>
                 {{/if}}
-            </span>
+                <span class="small gray">
+                    Submitted by {{authorname}}, {{fromNow}}.
+                    {{#if isAdminOrAuthor}}
+                        <span class="delete gray cursorPointer">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </span>
+                    {{/if}}
+                </span>
+            </div>
         </div>
         <div class="col-xs-12">
             {{#if isImageLike}}
