Initial features implemented. Initially proposed features have now been met. The project can now move in a number of directions. Propositions for newer features should now be considered.

--- a/nanoscope.html
+++ b/nanoscope.html
@@ -112,7 +112,7 @@
         <div class="col-xs-11 noPadding">
             <div style="padding-left: 20px;">
                 <h4 class="inline noMargin"><a href="{{url}}" rel="nofollow">{{title}}</a></h4>
-                <span class="small">({{domain}})</span><br>
+                <span class="small gray">({{domain}})</span><br>
                 {{#if isAdmin}}
                     <samp class="xSmall form-inline pull-right">
                         &nbsp; &nbsp;
